[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trafficlights"
version = "0.1.1"
description = "A package to help prevent race conditions."
authors = [
    { name="GloriousGlider8", email="sam.g.plimmer@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]
